fixed wording of jupyter notebook for ref to doc

--- a/platecurie/examples/Notebooks/Ex1_making_grids.ipynb
+++ b/platecurie/examples/Notebooks/Ex1_making_grids.ipynb
@@ -32,7 +32,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Let's load magnetic anomaly data covering the northwestern part of the North American continent extracted from the NAMAG model. This file was obtained separately using GMT (check the `PlateFlex` project's Wiki page [here](https://paudetseis.github.io/PlateFlex/getting_started.html#making-gridded-data) for more details on data preparation). The NAMAG model contains many gaps that are set to 0 in the original data set, as well as some strange data points with unrealistic values. "
+    "Let's load magnetic anomaly data covering the northwestern part of the North American continent extracted from the NAMAG model. This file was obtained separately using GMT (check the `PlateFlex` project's documentation [here](https://paudetseis.github.io/PlateFlex/getting_started.html#making-gridded-data) for more details on data preparation). The NAMAG model contains many gaps that are set to 0 in the original data set, as well as some strange data points with unrealistic values. "
    ]
   },
   {
